--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/mainBackground"
+        android:layout_width="884dp"
+        android:layout_height="458dp"
+        app:srcCompat="@drawable/LandscapeBackground"
+        tools:layout_editor_absoluteX="-77dp"
+        tools:layout_editor_absoluteY="-24dp" />
+
+    <ImageView
+        android:id="@+id/title"
+        android:layout_width="516dp"
+        android:layout_height="132dp"
+        app:srcCompat="@drawable/Logo"
+        tools:layout_editor_absoluteX="107dp"
+        tools:layout_editor_absoluteY="16dp" />
+
+    <ImageView
+        android:id="@+id/psyduckImage"
+        android:layout_width="87dp"
+        android:layout_height="154dp"
+        android:onClick="startGame"
+        app:srcCompat="@drawable/psyduck"
+        tools:layout_editor_absoluteX="322dp"
+        tools:layout_editor_absoluteY="195dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
