Home Screen Activity -> onClick Backgrnd: Share Info

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
         android:id="@+id/mainBackground"
         android:layout_width="884dp"
         android:layout_height="458dp"
+        android:onClick="shareInfoToMain"
         app:srcCompat="@drawable/LandscapeBackground"
         tools:layout_editor_absoluteX="-77dp"
         tools:layout_editor_absoluteY="-24dp" />
