--- a/app/src/main/res/layout/activity_running.xml
+++ b/app/src/main/res/layout/activity_running.xml
@@ -6,4 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".RunningActivity">
 
+    <ImageView
+        android:id="@+id/runningBackground"
+        android:layout_width="832dp"
+        android:layout_height="466dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/runningbackground" />
 </androidx.constraintlayout.widget.ConstraintLayout>
