--- a/app/src/main/res/layout/activity_swimming.xml
+++ b/app/src/main/res/layout/activity_swimming.xml
@@ -7,7 +7,7 @@
     tools:context=".SwimmingActivity">
 
     <ImageView
-        android:id="@+id/imageView12"
+        android:id="@+id/swimmingBackground"
         android:layout_width="1414dp"
         android:layout_height="717dp"
         app:layout_constraintBottom_toBottomOf="parent"
