--- a/app/src/main/res/layout/activity_running.xml
+++ b/app/src/main/res/layout/activity_running.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".RunningActivity">
 
-<!--Hello-->
     <ImageView
         android:id="@+id/background_one"
         android:layout_width="match_parent"
@@ -69,6 +68,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageButton"
         app:srcCompat="@drawable/down" />
+
+    <ImageView
+        android:id="@+id/graveler"
+        android:layout_width="92dp"
+        android:layout_height="57dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.774"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.7"
+        app:srcCompat="@drawable/graveler" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
