--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,12 +18,12 @@
         app:srcCompat="@drawable/landscapebackground" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/pidgeotBackground3"
         android:layout_width="38dp"
         android:layout_height="57dp"
         android:layout_marginStart="9dp"
         android:layout_marginTop="47dp"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintStart_toEndOf="@+id/pidgeotBackground2"
         app:layout_constraintTop_toBottomOf="@+id/title"
         app:srcCompat="@drawable/pidgeot" />
 
@@ -42,14 +42,14 @@
         android:layout_width="87dp"
         android:layout_height="154dp"
         android:layout_marginTop="47dp"
-        android:onClick="startGame"
+        android:onClick="shareInfoToMain"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title"
         app:srcCompat="@drawable/psyduck" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/pidgeotBackground1"
         android:layout_width="38dp"
         android:layout_height="57dp"
         android:layout_marginStart="160dp"
@@ -59,16 +59,16 @@
         app:srcCompat="@drawable/pidgeot" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/pidgeotBackground2"
         android:layout_width="38dp"
         android:layout_height="57dp"
         android:layout_marginTop="17dp"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintStart_toEndOf="@+id/pidgeotBackground1"
         app:layout_constraintTop_toBottomOf="@+id/title"
         app:srcCompat="@drawable/pidgeot" />
 
     <ImageView
-        android:id="@+id/imageView7"
+        android:id="@+id/laprasBackground"
         android:layout_width="42dp"
         android:layout_height="74dp"
         android:layout_marginTop="252dp"
