--- a/app/src/main/res/layout/activity_running.xml
+++ b/app/src/main/res/layout/activity_running.xml
@@ -7,7 +7,7 @@
     tools:context=".RunningActivity">
 
     <ImageView
-        android:id="@+id/background_one"
+        android:id="@+id/runningBackground1"
         android:layout_width="752dp"
         android:layout_height="441dp"
         android:src="@drawable/landscapebackground"
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/background_two"
+        android:id="@+id/runningBackground2"
         android:layout_width="753dp"
         android:layout_height="440dp"
         android:src="@drawable/landscapebackground"
@@ -29,7 +29,7 @@
         app:layout_constraintVertical_bias="0.508" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/groundPsyduck"
         android:layout_width="109dp"
         android:layout_height="80dp"
         android:layout_marginStart="48dp"
@@ -39,7 +39,7 @@
         app:srcCompat="@drawable/psyducksprite" />
 
     <ImageView
-        android:id="@+id/imageViewdoes"
+        android:id="@+id/airPsyduck"
         android:layout_width="109dp"
         android:layout_height="80dp"
         android:layout_marginStart="48dp"
@@ -48,7 +48,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/upButton"
         android:layout_width="81dp"
         android:layout_height="59dp"
         android:layout_marginStart="32dp"
@@ -59,14 +59,14 @@
         app:srcCompat="@drawable/up" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/downArrow"
         android:layout_width="75dp"
         android:layout_height="55dp"
         android:layout_marginStart="52dp"
         android:layout_marginBottom="20dp"
         android:onClick="downClick"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageButton"
+        app:layout_constraintStart_toEndOf="@+id/upButton"
         app:srcCompat="@drawable/down" />
 
     <ImageView
