--- a/app/src/main/res/layout/activity_swimming.xml
+++ b/app/src/main/res/layout/activity_swimming.xml
@@ -56,27 +56,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/imageButton"
-        android:layout_width="81dp"
-        android:layout_height="59dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginBottom="28dp"
+        android:layout_width="match_parent"
+        android:layout_height="170dp"
+        android:layout_marginStart="0dp"
         android:onClick="upClick"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/up" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/imageButton2"
-        android:layout_width="75dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginBottom="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="170dp"
+        android:layout_marginBottom="0dp"
         android:onClick="downClick"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageButton"
-        app:srcCompat="@drawable/down" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/graveler"
