--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -30,19 +30,21 @@
 
     <ImageView
         android:id="@+id/flyingButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="72dp"
+        android:layout_width="100dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="82dp"
+        android:layout_marginEnd="52dp"
         android:onClick="shareInfoToFly"
         app:layout_constraintEnd_toStartOf="@+id/runningButton"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/psyduckImage"
         app:srcCompat="@drawable/flying" />
 
     <ImageView
         android:id="@+id/runningButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="72dp"
+        android:layout_width="100dp"
+        android:layout_height="36dp"
+        android:layout_marginEnd="52dp"
         android:onClick="shareInfoToRun"
         app:layout_constraintEnd_toStartOf="@+id/swimmingButton"
         app:layout_constraintTop_toBottomOf="@+id/psyduckImage"
@@ -50,11 +52,22 @@
 
     <ImageView
         android:id="@+id/swimmingButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="200dp"
+        android:layout_width="100dp"
+        android:layout_height="36dp"
+        android:layout_marginEnd="52dp"
         android:onClick="shareInfoToSwim"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/battleButton"
         app:layout_constraintTop_toBottomOf="@+id/psyduckImage"
         app:srcCompat="@drawable/water" />
+
+    <ImageView
+        android:id="@+id/battleButton"
+        android:layout_width="100dp"
+        android:layout_height="36dp"
+        android:layout_marginEnd="84dp"
+        android:onClick="shareInfoToBattle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/psyduckImage"
+        app:srcCompat="@drawable/pokemonbattlebutton" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
