Commit Test Home 10/22/19

--- a/PsyduckLifeAndroid/app/src/main/res/layout/activity_battle.xml
+++ b/PsyduckLifeAndroid/app/src/main/res/layout/activity_battle.xml
@@ -7,18 +7,19 @@
     tools:context=".BattleActivity">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/battleBackground"
         android:layout_width="732dp"
         android:layout_height="459dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.711"
+        app:layout_constraintVertical_bias="0.916"
         app:srcCompat="@drawable/pokemonbattlebackground" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/psyduckImage"
         android:layout_width="119dp"
         android:layout_height="120dp"
         android:layout_marginStart="124dp"
