--- a/PsyduckLifeAndroid/app/src/main/res/layout/activity_flying.xml
+++ b/PsyduckLifeAndroid/app/src/main/res/layout/activity_flying.xml
@@ -29,7 +29,7 @@
         app:srcCompat="@drawable/flyingscrollingbackground" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/psyduckImage"
         android:layout_width="109dp"
         android:layout_height="80dp"
         android:layout_marginStart="48dp"
