--- a/app/src/main/res/layout/activity_swimming.xml
+++ b/app/src/main/res/layout/activity_swimming.xml
@@ -29,7 +29,7 @@
         app:srcCompat="@drawable/waterscrollingbackground" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/battleBackground"
         android:layout_width="109dp"
         android:layout_height="80dp"
         android:layout_marginStart="48dp"
