--- a/app/src/main/res/layout/activity_swimming.xml
+++ b/app/src/main/res/layout/activity_swimming.xml
@@ -86,5 +86,14 @@
         app:layout_constraintVertical_bias="0.457"
         app:srcCompat="@drawable/graveler" />
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="68dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
