--- a/app/src/main/res/drawable/directionsbox.xml
+++ b/app/src/main/res/drawable/directionsbox.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="5dp"
-        android:color="#000000" />
+        android:color="#9900FF99" />
 
-    <solid android:color="#FFFFFF" />
+    <solid android:color="#5500FF99" />
 
     <padding
         android:bottom="5dp"
@@ -13,4 +13,5 @@
         android:top="5dp" />
 
     <corners android:radius="15dp" />
+
 </shape>
