--- a/app/src/main/res/layout/activity_flying.xml
+++ b/app/src/main/res/layout/activity_flying.xml
@@ -33,7 +33,7 @@
         android:layout_width="109dp"
         android:layout_height="80dp"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="120dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/psyducksprite" />
@@ -43,7 +43,7 @@
         android:layout_width="109dp"
         android:layout_height="80dp"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -52,7 +52,7 @@
         android:layout_width="109dp"
         android:layout_height="80dp"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="200dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -61,7 +61,7 @@
         android:layout_width="109dp"
         android:layout_height="80dp"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="230dp"
+        android:layout_marginTop="280dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -102,6 +102,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:textStyle="bold|italic"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
