--- a/app/src/main/res/layout/activity_swimming.xml
+++ b/app/src/main/res/layout/activity_swimming.xml
@@ -7,6 +7,16 @@
     tools:context=".SwimmingActivity">
 
     <ImageView
+        android:layout_width="1414dp"
+        android:layout_height="717dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.297"
+        app:srcCompat="@drawable/waterscrollingbackground" />
+
+    <ImageView
         android:id="@+id/swimmingBackground1"
         android:layout_width="1414dp"
         android:layout_height="717dp"
@@ -59,7 +69,7 @@
     <ImageView
         android:id="@+id/imageButton"
         android:layout_width="match_parent"
-        android:layout_height="170dp"
+        android:layout_height="200dp"
         android:layout_marginStart="0dp"
         android:onClick="upClick"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,7 +78,7 @@
     <ImageView
         android:id="@+id/imageButton2"
         android:layout_width="match_parent"
-        android:layout_height="170dp"
+        android:layout_height="200dp"
         android:layout_marginBottom="0dp"
         android:onClick="downClick"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -93,6 +103,19 @@
         android:layout_marginTop="36dp"
         android:layout_marginEnd="68dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/instructions"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
+        android:background="@drawable/directionsboxwater"
+        android:text="@string/DirectionsFlying"
+        android:textAlignment="center"
+        android:textStyle="bold|italic"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
