--- a/PsyduckLifeAndroid/app/src/main/res/layout/activity_flying.xml
+++ b/PsyduckLifeAndroid/app/src/main/res/layout/activity_flying.xml
@@ -7,7 +7,7 @@
     tools:context=".FlyingActivity">
 
     <ImageView
-        android:id="@+id/swimmingBackground1"
+        android:id="@+id/flyingBackground1"
         android:layout_width="@dimen/flyingbackgroundwidth"
         android:layout_height="717dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -18,7 +18,7 @@
         app:srcCompat="@drawable/flyingscrollingbackground" />
 
     <ImageView
-        android:id="@+id/swimmingBackground2"
+        android:id="@+id/flyingBackground2"
         android:layout_width="@dimen/flyingbackgroundwidth"
         android:layout_height="717dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -33,40 +33,40 @@
         android:layout_width="109dp"
         android:layout_height="80dp"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="120dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/psyducksprite" />
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/level1"
         android:layout_width="109dp"
         android:layout_height="80dp"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/level3"
         android:layout_width="109dp"
         android:layout_height="80dp"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="200dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/level4"
         android:layout_width="109dp"
         android:layout_height="80dp"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="230dp"
+        android:layout_marginTop="280dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageButton"
+        android:id="@+id/upButtonRunning"
         android:layout_width="match_parent"
         android:layout_height="170dp"
         android:layout_marginStart="0dp"
@@ -75,11 +75,54 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageButton2"
+        android:id="@+id/downButton"
         android:layout_width="match_parent"
         android:layout_height="170dp"
         android:layout_marginBottom="0dp"
         android:onClick="downClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/timer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="56dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/instructionsFlying"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
+        android:background="@drawable/directionsbox"
+        android:text="@string/DirectionsFlying"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:textStyle="bold|italic"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/graveler1Flying"
+        android:layout_width="96dp"
+        android:layout_height="69dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="44dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/graveler" />
+
+    <ImageView
+        android:id="@+id/graveler2Flying"
+        android:layout_width="96dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="44dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/graveler" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
