--- a/PsyduckLifeAndroid/app/src/main/res/layout/activity_home_screen.xml
+++ b/PsyduckLifeAndroid/app/src/main/res/layout/activity_home_screen.xml
@@ -70,4 +70,29 @@
         app:layout_constraintTop_toBottomOf="@+id/battleBackground"
         app:srcCompat="@drawable/pokemonbattlebutton" />
 
+    <TextView
+        android:id="@+id/chooseLevel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="168dp"
+        android:text="Enter Psyduck Level to Battle:"
+        android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/enterLevel"
+        android:layout_width="151dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="184dp"
+        android:layout_marginTop="10dp"
+        android:ems="10"
+        android:hint="Enter Level"
+        android:inputType="number"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="@+id/chooseLevel"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
