--- a/PsyduckLifeAndroid/app/src/main/res/layout/activity_battle.xml
+++ b/PsyduckLifeAndroid/app/src/main/res/layout/activity_battle.xml
@@ -173,6 +173,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
+        android:layout_marginTop="28dp"
         android:text="          "
         android:textColor="#FFFFFF"
         android:textSize="16sp"
